dotCMS/core#19824 Fixed overflow bug in content types (#1600)
* Fixed overflow bug in content types

* Removed fdescribe

--- a/src/app/portlets/shared/dot-content-types-edit/components/layout/content-types-layout.component.scss
+++ b/src/app/portlets/shared/dot-content-types-edit/components/layout/content-types-layout.component.scss
@@ -56,8 +56,12 @@ $top-height: ($toolbar-height + $tabview-nav-height + $dot-secondary-toolbar-mai
     }
 
     .content-type__fields-main {
+        background-color: $gray-bg;
         display: flex;
+        flex-direction: column;
         flex-grow: 1;
+        overflow: auto;
+        padding: $spacing-3;
     }
 
     .content-type__fields-layout {
